# recipe_chatbot

./: .gitignore  api.py  chatbot.py  client.py  database.py  docker-compose.yml  elastic_search.py  main.py  models.py  postgre_db.py  pyproject.toml  qdrant_db.py  recipe_entity.py  retriever.py  scraper.py  search.py
app/: __init__.py  client.py  database.py  main.py  schemas.py
app/agent/: chef.py  prompts.py  router.py
app/core/: exceptions.py  logging.py
app/domain/: chunks.py
app/dto/: distributed_payload.py
app/embedder/: embedder.py
app/infrastructure/: initializer.py
app/models/: __init__.py  es_model.py  orm_model.py  outbox_model.py  pg_model.py  qdr_model.py
app/repositories/: __init__.py  es_repository.py  intent_seeds.py  outbox_repository.py  pg_repository.py  qdr_repository.py
app/schema/: __init__.py  ai_schemas.py  retriever_schemas.py
app/services/: __init__.py  chatbot.py  ingestion.py  pg_service.py  (+3 more)
db_utils/: __init__.py  elastic_search.py  postgre_db.py  qdrant_db.py
entity/: __init__.py  es_points_model.py
migrations/: env.py
scripts/: init_db.py
tasks/: outbox_poller.py  tasks.py
tests/: conftest.py  test_chunks.py  test_es_repository.py  test_es_repository_unit_test.py  test_ingestion_service.py  test_outbox_repository.py  test_pg_converter.py  test_pg_repository.py  test_qdr_repository.py  test_router.py  test_stale_revent_reset_worker.py  test_tasks.py  test_url_producer.py
tests_integration/: test_es_repository_integration_test.py
web_crawler/: __init__.py  exceptions.py  main.py  scraper.py  urlscanner.py
(+54 files in other folders)
