[project]
name = "recipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datamodel-code-generator>=0.53.0",
    "dotenv>=0.9.9",
    "elasticsearch>=8.0.0,<9.0.0",
    "flagembedding>=1.3.5",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
    "transformers==4.48.0",
]
