[project]
name = "recipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "datamodel-code-generator>=0.53.0",
    "dotenv>=0.9.9",
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.128.0",
    "flagembedding>=1.3.5",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.51.0",
    "qdrant-client>=1.16.2",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
    "transformers==4.48.0",
    "uvicorn>=0.40.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-html>=4.2.0",
    "pytest-regressions>=2.10.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
    "loguru>=0.7.3",
    "redis>=7.1.0",
    "flower>=2.0.1",
    "taskiq[redis]>=0.12.1",
    "taskiq-redis>=1.2.2",
]
